# PDI

./: README.md
ativ1/: CMakeLists.txt  makefile  projeto-1.cpp
ativ2/: CMakeLists.txt  README.md
ativ2/include/: calcHist.h  laplacian.h  mean_filter.h
ativ2/src/: calcHist.cpp  laplacian.cpp  main_high_boost.cpp  main_laplacian.cpp  mean_filter.cpp
